apps/site/web/static/css/_schedule-v2.scss
/* ... */
.stop-info-column {
  min-width: 8rem;
  white-space: nowrap;
}

@include vehicle-location-mode-color(".commuter-rail", $brand-commuter-rail);
@include vehicle-location-mode-color(".red-line", $brand-red-line);
@include vehicle-location-mode-color(".blue-line", $brand-blue-line);
@include vehicle-location-mode-color(".orange-line", $brand-orange-line);
@include vehicle-location-mode-color(".green-line", $brand-green-line);
@include vehicle-location-mode-color(".bus", $brand-bus);
@include vehicle-location-mode-color(".ferry", $brand-ferry);


%trip-stop {
  @extend %unpadded-table-row;
  background-color: transparent;
  border-bottom: 0;
  border-top: 0;
  position: relative;

  .stop-info {
    @extend %stop-name-and-time-column;
    border-bottom: 1px solid $gray-lightest;
    padding-bottom: $base-spacing;
  }
}

%stop-name-column {
  float: left;
  width: 50%;
}

%stop-time-column {
  float: left;
  width: 50%;
}

%stop-name-and-time-column {
  @include unpadded-column;
  display: table-cell;
  margin-left: $base-spacing + $icon-size;
  width: grid-width(10);

  > span:first-child {
    @extend %stop-name-column;
  }

  > span:last-child {
    @extend %stop-time-column;
  }
}

// trip info parent container
.schedule-trip-info {
  @include make-row();

  @include media-breakpoint-up(md) {
    float: right;
    width: 50%;
  }
}

.schedule-trip-info-header {
  @extend %table-header;
  @extend %table-row;

  @include media-breakpoint-down(sm) {
    display: none;
  }
}

.schedule-trip-stop,
.collapsed-row {
  @extend %trip-stop;
}

.route-status,
.trip-duration {
  @extend %table-row;
}

.trip-info-labels {
  @extend %unpadded-table-row;
  border-bottom-width: 0;
  font-weight: bold;

  .vehicle-location::before {
    border-left-color: transparent;
    border-left-width: 0;
  }

  .stop-info {
    @extend %stop-name-and-time-column;

    @include media-breakpoint-down(xs) {
      display: none;
    }
  }
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// DATE AND DIRECTION FILTER BUTTONS
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

%schedule-filter-button-label {
  font-weight: bold;
  margin-bottom: $space-6;

  @include media-breakpoint-only(xs) {
    margin-bottom: $space-12;
  }
}

%schedule-filter-button {
  position: relative;

  @include media-breakpoint-up(sm) {
    float: left;
    margin-right: $horizontal-padding;
    width: 45%;
  }

  .filter-label {
    @extend %schedule-filter-button-label;
  }

  .filter-button {
    @extend %button-primary-outline;
    @extend %block-level-link;
    position: relative;
    text-align: left;
    width: 100%;
  }

  .inner-label {
    color: $gray-dark;
  }
}

.direction-filter,
.date-filter {
  @extend %schedule-filter-button;
}


////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// COMMUTER RAIL TIMETABLE
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.schedule-v2-timetable-container {
  max-width: 100%;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
}

.schedule-v2-timetable-hide-earlier .schedule-v2-timetable-time-col-earlier,
.schedule-v2-timetable-hide-later .schedule-v2-timetable-time-col-later {
  background-color: $white;
  color: $white;

  > .schedule-v2-timetable-time-text {
    display: none;
  }
}

.schedule-v2-timetable-hide-earlier .schedule-v2-timetable-header-col.schedule-v2-timetable-time-col-earlier,
.schedule-v2-timetable-hide-later .schedule-v2-timetable-header-col.schedule-v2-timetable-time-col-later {
  background-color: $brand-primary-darkest;
  color: $brand-primary-darkest;
}

.schedule-v2-timetable-col,
.schedule-v2-timetable-name-col,
.schedule-v2-timetable-header-col {
  padding: .5rem 1rem;

  @include media-breakpoint-up(md) {
    min-width: 9rem;
  }
}

.schedule-v2-timetable-col,
.schedule-v2-timetable-header-col {
  text-align: center;
}

.schedule-v2-timetable-col,
.schedule-v2-timetable-name-col:not(.schedule-v2-timetable-header-col) {
  background-color: $white;
}

.schedule-v2-timetable-header-col {
  background-color: $brand-primary-darkest;
  color: $white;
  font-weight: bold;
}

.schedule-v2-timetable-row:not(:last-child) {
  > :not(.schedule-v2-timetable-name-col) {
    // border on the bottom of every row except the last
    border-bottom: 1px solid $gray-lightest;
  }
}

.schedule-v2-timetable-name-col {
  text-align: left;
}

.schedule-v2-icon-nowrap > a {
  float: left;
  padding-right: 1.2rem;
}

.schedule-v2-icon-nowrap > svg {
  float: left;
  margin-left: -$space-16;
}

.schedule-v2-timetable-name {
  margin-right: $base-spacing-sm; // left scroll warning

  @include media-breakpoint-up(md) {
    margin-left: 2.5rem; // bubble
    margin-right: $base-spacing-lg; // left scroll warning
  }
}

.schedule-v2-timetable-time-col {
  background-color: rgba($gray-lightest, .5);
  min-width: $base-spacing-sm;
  padding: $base-spacing-sm 0 0;
  text-align: center;

  @include media-breakpoint-up(md) {
    background-color: $gray-lightest;
    color: $gray-dark;
    min-width: $base-spacing-lg;
  }
}

.schedule-v2-timetable-time-col-earlier {
  height: 100%;
  position: absolute;
  right: 0;
  top: 0;
}
/* ... */

